# markdown2docx

./: .pre-commit-config.yaml  Makefile  README.md  README_zh.md  example.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
examples/: README.md
scripts/: setup-env.sh
src/markdown2docx/: __init__.py  cli.py  config.py  converter.py  exceptions.py  templates.py
tests/: test_cli.py  test_config.py  test_converter.py  test_exceptions.py  test_integration.py  test_styles.py  test_templates.py
