[project]
name = "markdown2docx"
version = "0.1.0"
description = "Convert Markdown files to DOCX format with modern standards support"
requires-python = ">=3.13"
dependencies = [
    "pypandoc>=1.15",
    "python-docx>=1.2.0",
    "lxml>=6.0.0",  # For better XML processing
    "packaging>=25.0",  # For version comparison
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "cli: marks tests as CLI tests",
    "template: marks tests as template tests"
]